style: Fix some high contrast papercuts
- add HC style to slider
- add HC style to Quick settings submenu header
- fix border issue with flat card style

Closes: https://gitlab.gnome.org/GNOME/gnome-shell/-/issues/7320
Part-of: <https://gitlab.gnome.org/GNOME/gnome-shell/-/merge_requests/3165>

--- a/data/theme/gnome-shell-sass/_common.scss
+++ b/data/theme/gnome-shell-sass/_common.scss
@@ -159,6 +159,7 @@ stage {
 
 %card_flat {
   @extend %card_common;
+  border: 1px solid transparent !important; // override of the button style needed here
   @include button(undecorated, $style: flat);
   &:hover { @include button(hover, $style: flat);}
   &:active { @include button(active, $style: flat);}
