--- a/data/theme/gnome-shell-sass/widgets/_slider.scss
+++ b/data/theme/gnome-shell-sass/widgets/_slider.scss
@@ -19,4 +19,9 @@ $slider_size: $scalable_icon_size;
   -slider-handle-radius: $slider_size * 0.5; // half the size of the size
   -slider-handle-border-width: 0;
   -slider-handle-border-color: transparent; // because 0 width
+
+    // hc style
+    @if $contrast == 'high' {
+      -barlevel-background-color: transparentize($fg_color, 0.6);
+    }
 }
